--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
             saveData() { /* Same as before */
                 localStorage.setItem('focusTaskData', JSON.stringify({ tasks: this.tasks, deadlineTasks: this.deadlineTasks, inboxItems: this.inboxItems }));},
 
-            bindEvents() { /* Same as before */
+            bindEvents() { 
                 document.getElementById('prevDay').addEventListener('click', () => this.navigateDate(-1));
                 document.getElementById('nextDay').addEventListener('click', () => this.navigateDate(1));
                 document.getElementById('todayButton').addEventListener('click', () => this.goToToday());
@@ -799,7 +799,52 @@
                 document.getElementById('cancelDeadline').addEventListener('click', () => this.toggleDeadlineForm(false)); 
                 document.getElementById('inboxToggle').addEventListener('click', () => this.toggleInbox());
                 document.getElementById('addInbox').addEventListener('click', () => this.addInboxItem());
-                document.getElementById('inboxInput').addEventListener('keypress', (e) => { if (e.key === 'Enter') this.addInboxItem(); });},
+                document.getElementById('inboxInput').addEventListener('keypress', (e) => { if (e.key === 'Enter') this.addInboxItem(); });
+
+                // --- NEW: スワイプによる日付移動機能 ---
+                const swipeArea = document.body;
+                let touchStartX = 0;
+                let touchStartY = 0;
+                let isSwipeActive = false; // スワイプ操作中かどうかのフラグ
+
+                swipeArea.addEventListener('touchstart', (e) => {
+                    // ボタンや入力、特定の操作エリアではスワイプを開始しない
+                    if (e.target.closest('button, input, a, .sekki-grid')) {
+                        isSwipeActive = false;
+                        return;
+                    }
+                    isSwipeActive = true;
+                    touchStartX = e.changedTouches[0].screenX;
+                    touchStartY = e.changedTouches[0].screenY;
+                }, { passive: true });
+
+                swipeArea.addEventListener('touchend', (e) => {
+                    if (!isSwipeActive) return;
+                    isSwipeActive = false; // フラグをリセット
+
+                    const touchEndX = e.changedTouches[0].screenX;
+                    const touchEndY = e.changedTouches[0].screenY;
+                    this.handleSwipe(touchStartX, touchStartY, touchEndX, touchEndY);
+                }, { passive: true });
+            },
+            
+            // --- NEW: スワイプ操作を処理するメソッド ---
+            handleSwipe(startX, startY, endX, endY) {
+                const thresholdX = 50;  // 横スワイプとして認識する最小距離
+                const restraintY = 100; // 横スワイプ中に許容される縦の最大移動距離
+
+                const diffX = endX - startX;
+                const diffY = endY - startY;
+
+                // 横方向の移動がしきい値を超え、縦方向の移動が抑制範囲内かをチェック
+                if (Math.abs(diffX) > thresholdX && Math.abs(diffY) < restraintY) {
+                    if (diffX > 0) {
+                        this.navigateDate(-1); // 右スワイプで前の日へ
+                    } else {
+                        this.navigateDate(1);  // 左スワイプで次の日へ
+                    }
+                }
+            },
 
             navigateDate(days) { /* Same as before */
                 const newDate = new Date(this.selectedDate);
@@ -1150,6 +1195,7 @@
     </script>
 </body>
 </html>
+
 
         app.init();
     </script>
