Fix Android date display

--- a/index.html
+++ b/index.html
@@ -1409,8 +1409,8 @@
         }
         
         document.addEventListener('DOMContentLoaded', function() {
-            const now = new Date();
             app.updateSekki();
+            app.updateTodayDisplay();
         });
 
         const sekkiData = { // Sekki data remains the same
