--- a/index.html
+++ b/index.html
@@ -2735,7 +2735,7 @@
                             'Authorization': `Bearer ${this.openaiApiKey}`
                         },
                         body: JSON.stringify({
-                            model: 'gpt-o3',
+                            model: 'o3',
                             messages: [{
                                 role: 'system',
                                 content: 'You are a supportive coach for someone with ADHD tendencies. Provide encouraging, practical advice while being understanding of ADHD challenges. Write in Japanese. IMPORTANT: Always complete your sentences and thoughts. Never cut off mid-sentence. Ensure your response is a complete, coherent message.'
