--- a/index.html
+++ b/index.html
@@ -2734,12 +2734,20 @@
                             'Content-Type': 'application/json',
                             'Authorization': `Bearer ${this.openaiApiKey}`
                         },
-                        body: JSON.stringify({
-                            model: 'o3',
-                            messages: [{
-                                role: 'system',
-                                content: 'You are a supportive coach for someone with ADHD tendencies. Provide encouraging, practical advice while being understanding of ADHD challenges. Write in Japanese. IMPORTANT: Always complete your sentences and thoughts. Never cut off mid-sentence. Ensure your response is a complete, coherent message.'
-                            }, {
+                       body: JSON.stringify({
+  model: 'o3',                 // ← ここを変更
+  messages: [
+    {
+      role: 'system',
+      content: 'You are a supportive coach for someone with ADHD tendencies. Provide encouraging, practical advice while being understanding of ADHD challenges. Write in Japanese. IMPORTANT: Always complete your sentences and thoughts. Never cut off mid-sentence. Ensure your response is a complete, coherent message.'
+    },
+    {
+      role: 'user',
+      content: prompt
+    }
+  ]
+})
+
                                 role: 'user',
                                 content: prompt
                             }],
