スワイプメニューのバグ修正と改善
- 共通のswipe-menu.jsを作成してメニュー機能を統一
- 統計画面でメニューが反応しない問題を修正
- 画面遷移時に自動的にメニューを閉じる機能を追加
- 全画面で一貫した動作になるよう実装を統一

--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
     <script src="js/data/sekki-data.js?v=3"></script>
     <script src="js/animations/seasonal-animations.js?v=3"></script>
     <script src="js/projects.js"></script>
+    <script src="js/swipe-menu.js"></script>
     <script src="js/app.js?v=3"></script>
 </body>
 </html>
