--- a/statistics.html
+++ b/statistics.html
@@ -55,6 +55,10 @@
             transition-delay: 0.35s;
         }
         
+        #menuItems.open .menu-item:nth-child(7) {
+            transition-delay: 0.4s;
+        }
+        
         .menu-item:active {
             transform: scale(0.9);
         }
@@ -419,6 +423,11 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01"></path>
                         <circle cx="12" cy="16" r="1" fill="currentColor"></circle>
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2v4"></path>
+                    </svg>
+                </a>
+                <a href="habits.html" class="menu-item block w-12 h-12 bg-purple-600 rounded-full flex items-center justify-center transition-all hover:bg-purple-500" title="習慣">
+                    <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                     </svg>
                 </a>
                 <a href="settings.html" class="menu-item block w-12 h-12 bg-gray-700 rounded-full flex items-center justify-center transition-all hover:bg-gray-600" title="設定">
