feat(fitness): add streak counter in dashboard
Shows consecutive days with at least one activity.

--- a/fitness.html
+++ b/fitness.html
@@ -77,7 +77,7 @@
           <div id="fxXpText" class="text-right text-xs text-gray-600 mt-1">0 / 150 XP</div>
         </div>
 
-        <div class="grid grid-cols-3 gap-2 text-center mb-3">
+        <div class="grid grid-cols-4 gap-2 text-center mb-3">
           <div class="mini-card">
             <div class="text-xs text-gray-600">加重総距離</div>
             <div id="fxWeighted" class="font-semibold">0.00 km</div>
@@ -89,6 +89,10 @@
           <div class="mini-card">
             <div class="text-xs text-gray-600">記録日数</div>
             <div id="fxDays" class="font-semibold">0 日</div>
+          </div>
+          <div class="mini-card">
+            <div class="text-xs text-gray-600">連続日数</div>
+            <div id="fxStreak" class="font-semibold">0 日</div>
           </div>
         </div>
 
