--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="styles/sekki-backgrounds.css?v=3">
     <link rel="stylesheet" href="styles/animations.css?v=3">
     <link rel="stylesheet" href="styles/components.css?v=3">
+    <link rel="stylesheet" href="styles/fitness.css?v=1">
 </head>
 <body>
     <div id="backgroundSeason" class="min-h-screen bg-summer gradient-animation transition-all duration-1000 relative">
@@ -85,6 +86,67 @@
                     <div id="yearSekkiList" class="grid grid-cols-3 sm:grid-cols-4 gap-1 sm:gap-2 text-xs sm:text-sm sekki-grid"></div>
                 </div>
             </div>
+
+            <!-- フィットネス（ホームに統合） -->
+            <div class="washi-card rounded-2xl p-4 sm:p-6 mb-4 animate-fadeInUp" id="fitnessWidget">
+                <div class="flex items-center justify-between mb-3">
+                    <h3 class="text-base sm:text-lg font-semibold text-gray-800">フィットネス（ラン/ウォーク/サイクル）</h3>
+                    <button id="wToggle" class="text-sm text-blue-600 hover:underline">入力を表示</button>
+                </div>
+
+                <!-- ミニ入力 -->
+                <div id="wForm" class="hidden mb-3">
+                    <div class="grid grid-cols-2 sm:grid-cols-5 gap-2">
+                        <select id="wType" class="form-input">
+                            <option value="run">ランニング</option>
+                            <option value="walk">ウォーキング</option>
+                            <option value="cycle">サイクリング</option>
+                        </select>
+                        <input id="wDistance" type="number" step="0.01" min="0" placeholder="距離km" class="form-input" />
+                        <input id="wMinutes" type="number" step="1" min="1" placeholder="分" class="form-input" />
+                        <input id="wDate" type="date" class="form-input" />
+                        <input id="wTime" type="time" class="form-input" />
+                    </div>
+                    <div class="flex gap-2 mt-2">
+                        <input id="wNote" type="text" class="form-input flex-1" placeholder="メモ（任意）" />
+                        <button id="wSave" class="save-button">保存</button>
+                    </div>
+                    <div id="wResult" class="text-xs text-gray-600 mt-1"></div>
+                </div>
+
+                <!-- ミニダッシュボード -->
+                <div class="grid grid-cols-2 gap-3 mb-3">
+                    <div>
+                        <div class="flex items-center justify-between mb-1">
+                            <div class="text-gray-700 text-sm">レベル</div>
+                            <div id="wLevel" class="font-semibold">Lv 1</div>
+                        </div>
+                        <div class="h-2 bg-gray-200 rounded"><div id="wXpBar" class="h-2 bg-blue-500 rounded" style="width:0%"></div></div>
+                        <div id="wXpText" class="text-right text-xs text-gray-600 mt-1">0 / 150 XP</div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-2 text-center">
+                        <div class="mini-card"><div class="text-xs text-gray-600">加重総距離</div><div id="wWeighted" class="font-semibold">0.00 km</div></div>
+                        <div class="mini-card"><div class="text-xs text-gray-600">連続日数</div><div id="wStreak" class="font-semibold">0 日</div></div>
+                    </div>
+                </div>
+                <div class="grid grid-cols-3 gap-2 text-center mb-4">
+                    <div class="mini-card"><div class="text-xs text-gray-600">Run</div><div id="wRunKm" class="font-semibold">0.00 km</div></div>
+                    <div class="mini-card"><div class="text-xs text-gray-600">Walk</div><div id="wWalkKm" class="font-semibold">0.00 km</div></div>
+                    <div class="mini-card"><div class="text-xs text-gray-600">Cycle</div><div id="wCycleKm" class="font-semibold">0.00 km</div></div>
+                </div>
+
+                <!-- カレンダー（履歴） -->
+                <div class="mb-2 flex items-center justify-between">
+                    <div class="text-sm font-semibold text-gray-800">履歴カレンダー</div>
+                    <div class="flex items-center gap-2">
+                        <button id="wCalPrev" class="px-2 py-1 bg-gray-200 rounded">←</button>
+                        <div id="wCalMonthLabel" class="text-sm text-gray-700"></div>
+                        <button id="wCalNext" class="px-2 py-1 bg-gray-200 rounded">→</button>
+                    </div>
+                </div>
+                <div id="wCalendarGrid" class="grid grid-cols-7 gap-1 text-xs"></div>
+                <div id="wDayDetail" class="mt-2 text-sm text-gray-700"></div>
+            </div>
         </div>
 
     </div>
@@ -96,7 +158,10 @@
     <!-- JavaScript Files with cache busting -->
     <script src="js/data/sekki-data.js?v=3"></script>
     <script src="js/animations/seasonal-animations.js?v=3"></script>
+    <script src="js/fitness-data.js?v=1"></script>
+    <script type="module" src="js/fitness-core.js?v=1"></script>
     <script type="module" src="js/app-simple.js?v=1"></script>
+    <script type="module" src="js/fitness-widget.js?v=1"></script>
     
     <script>
         // アプリケーションの初期化
