--- a/index.html
+++ b/index.html
@@ -96,20 +96,44 @@
 
                 <!-- ミニ入力 -->
                 <div id="wForm" class="hidden mb-3">
-                    <div class="grid grid-cols-2 sm:grid-cols-5 gap-2">
-                        <select id="wType" class="form-input">
-                            <option value="run">ランニング</option>
-                            <option value="walk">ウォーキング</option>
-                            <option value="cycle">サイクリング</option>
-                        </select>
-                        <input id="wDistance" type="number" step="0.01" min="0" placeholder="距離km" class="form-input" />
-                        <input id="wMinutes" type="number" step="1" min="1" placeholder="分" class="form-input" />
-                        <input id="wDate" type="date" class="form-input" />
-                        <input id="wTime" type="time" class="form-input" />
+                    <div class="grid grid-cols-2 sm:grid-cols-6 gap-2 items-end">
+                        <div>
+                          <label class="block text-xs text-gray-600 mb-1">種目</label>
+                          <select id="wType" class="form-input">
+                              <option value="run">🏃‍♂️ ラン</option>
+                              <option value="walk">👣 ウォーク</option>
+                              <option value="cycle">🚴‍♂️ サイクル</option>
+                          </select>
+                        </div>
+                        <div>
+                          <label class="block text-xs text-gray-600 mb-1">距離(km)</label>
+                          <div class="flex gap-2">
+                            <input id="wDistance" type="number" step="0.01" min="0" placeholder="例:5.0" class="form-input flex-1" />
+                            <button id="wPlus1Km" class="px-2 py-2 rounded bg-gray-200 text-gray-800">+1km</button>
+                          </div>
+                        </div>
+                        <div>
+                          <label class="block text-xs text-gray-600 mb-1">分(min)</label>
+                          <div class="flex gap-2">
+                            <input id="wMinutes" type="number" step="1" min="1" placeholder="例:30" class="form-input flex-1" />
+                            <button id="wPlus10Min" class="px-2 py-2 rounded bg-gray-200 text-gray-800">+10分</button>
+                          </div>
+                        </div>
+                        <div>
+                          <label class="block text-xs text-gray-600 mb-1">日付</label>
+                          <input id="wDate" type="date" class="form-input" />
+                        </div>
+                        <div>
+                          <label class="block text-xs text-gray-600 mb-1">開始時刻</label>
+                          <input id="wTime" type="time" class="form-input" />
+                        </div>
+                        <div class="flex gap-2">
+                          <button id="wRecall" class="px-3 py-2 rounded bg-white/70 border border-gray-300 text-gray-700">直近を再入力</button>
+                          <button id="wSave" class="save-button animate-pulse-soft">保存</button>
+                        </div>
                     </div>
                     <div class="flex gap-2 mt-2">
                         <input id="wNote" type="text" class="form-input flex-1" placeholder="メモ（任意）" />
-                        <button id="wSave" class="save-button">保存</button>
                     </div>
                     <div id="wResult" class="text-xs text-gray-600 mt-1"></div>
                 </div>
@@ -145,7 +169,13 @@
                     </div>
                 </div>
                 <div id="wCalendarGrid" class="grid grid-cols-7 gap-1 text-xs"></div>
+                <div id="wCalSummary" class="mt-2 text-xs text-gray-700"></div>
                 <div id="wDayDetail" class="mt-2 text-sm text-gray-700"></div>
+
+                <div class="mt-3">
+                  <div class="text-sm font-semibold text-gray-800 mb-1">次に狙える称号</div>
+                  <div id="wNextTargets" class="text-xs text-gray-700"></div>
+                </div>
             </div>
         </div>
 
