--- a/fitness.html
+++ b/fitness.html
@@ -19,10 +19,110 @@
       <a href="index.html" class="text-sm text-blue-600 hover:underline">二十四節気へ戻る</a>
     </header>
 
+    <!-- ハイテンション入力（新しいクイック入力UI） -->
+    <section class="washi-card p-4 rounded-2xl mb-4" id="fxTurbo">
+      <div class="flex items-center justify-between mb-2">
+        <h2 class="text-lg font-semibold text-gray-800">ハイテンション入力</h2>
+        <span id="fxTurboMotivation" class="text-xs text-gray-600"></span>
+      </div>
+
+      <!-- 種目セグメント -->
+      <div class="grid grid-cols-3 gap-2 mb-3" role="tablist" aria-label="アクティビティ種目">
+        <button class="seg-big" id="txTypeRun" aria-selected="true">🏃‍♂️ ラン</button>
+        <button class="seg-big" id="txTypeWalk" aria-selected="false">🚶‍♀️ ウォーク</button>
+        <button class="seg-big" id="txTypeCycle" aria-selected="false">🚴‍♀️ サイクル</button>
+      </div>
+
+      <!-- 距離コントロール -->
+      <div class="mb-3">
+        <div class="flex items-center justify-between mb-1">
+          <div class="text-sm font-semibold text-gray-800">距離</div>
+          <div class="text-xs text-gray-600">タップで加算</div>
+        </div>
+        <div class="flex items-center gap-2 mb-2">
+          <button class="stepper" id="txDistMinus">−</button>
+          <div class="grow text-center">
+            <div class="text-2xl font-bold text-gray-900" id="txDistanceView">0.0</div>
+            <div class="text-xs text-gray-500">km</div>
+          </div>
+          <button class="stepper" id="txDistPlus">＋</button>
+        </div>
+        <div class="grid grid-cols-5 gap-2">
+          <button class="chip" data-add-dist="0.5">+0.5</button>
+          <button class="chip" data-add-dist="1">+1</button>
+          <button class="chip" data-add-dist="2">+2</button>
+          <button class="chip" data-add-dist="3">+3</button>
+          <button class="chip" data-add-dist="5">+5</button>
+        </div>
+      </div>
+
+      <!-- 時間コントロール -->
+      <div class="mb-3">
+        <div class="flex items-center justify-between mb-1">
+          <div class="text-sm font-semibold text-gray-800">分</div>
+          <div class="text-xs text-gray-600">タップで加算</div>
+        </div>
+        <div class="flex items-center gap-2 mb-2">
+          <button class="stepper" id="txMinMinus">−</button>
+          <div class="grow text-center">
+            <div class="text-2xl font-bold text-gray-900" id="txMinutesView">0</div>
+            <div class="text-xs text-gray-500">min</div>
+          </div>
+          <button class="stepper" id="txMinPlus">＋</button>
+        </div>
+        <div class="grid grid-cols-4 gap-2">
+          <button class="chip" data-add-min="10">+10</button>
+          <button class="chip" data-add-min="20">+20</button>
+          <button class="chip" data-add-min="30">+30</button>
+          <button class="chip" data-add-min="45">+45</button>
+        </div>
+      </div>
+
+      <!-- 日付・時間ショートカット -->
+      <div class="mb-3">
+        <div class="text-sm font-semibold text-gray-800 mb-1">日付と時間</div>
+        <div class="grid grid-cols-2 gap-2 mb-2">
+          <button class="chip alt w-full" id="txToday">今日</button>
+          <button class="chip alt w-full" id="txYesterday">昨日</button>
+        </div>
+        <div class="grid grid-cols-3 gap-2">
+          <button class="chip alt" data-set-time="06:00">🌅 朝(6:00)</button>
+          <button class="chip alt" data-set-time="12:00">🌤️ 昼(12:00)</button>
+          <button class="chip alt" data-set-time="21:00">🌙 夜(21:00)</button>
+        </div>
+      </div>
+
+      <!-- ひとこと & XP 事前表示 -->
+      <div class="flex items-center justify-between text-sm mb-2">
+        <div id="txSummary" class="text-gray-700">今日は — / —</div>
+        <div id="txXpPreview" class="text-blue-600 font-semibold">+0 XP</div>
+      </div>
+
+      <!-- クイックコンボ -->
+      <div class="mb-3">
+        <div class="text-sm font-semibold text-gray-800 mb-1">ワンタップ</div>
+        <div class="grid grid-cols-3 gap-2">
+          <button class="combo" data-combo='{"type":"run","km":3,"min":20,"time":"06:30"}'>朝ラン 3km/20分</button>
+          <button class="combo" data-combo='{"type":"walk","km":2,"min":20,"time":"12:15"}'>散歩 2km/20分</button>
+          <button class="combo" data-combo='{"type":"cycle","km":5,"min":15,"time":"17:30"}'>サイクル 5km/15分</button>
+        </div>
+      </div>
+
+      <!-- セーブアクション -->
+      <div class="flex items-center gap-2">
+        <button id="txRecallLast" class="chip alt">昨日と同じ！</button>
+        <button id="txSave" class="save-button flex-1">保存して進化！</button>
+      </div>
+      <div id="txResult" class="text-xs text-gray-600 mt-2"></div>
+    </section>
+
     <div class="grid md:grid-cols-2 gap-4">
       <!-- 入力カード -->
-      <section class="washi-card p-4 rounded-2xl">
-        <h2 class="text-lg font-semibold text-gray-800 mb-3">手入力で記録</h2>
+      <section class="washi-card p-4 rounded-2xl" id="fxAdvanced">
+        <div class="flex items-center justify-between mb-3">
+          <h2 class="text-lg font-semibold text-gray-800">詳細入力</h2>
+          <button id="fxAdvancedToggle" class="text-sm text-blue-600 hover:underline">隠す</button>
+        </div>
         <div class="space-y-3">
           <div>
             <label class="block text-sm text-gray-700 mb-1">種目</label>
@@ -185,6 +285,126 @@
 
   <script src="js/fitness-data.js?v=1"></script>
   <script type="module" src="js/fitness-app.js?v=1"></script>
+  <script>
+    // ハイテンション入力の挙動を既存保存ロジックに橋渡し
+    document.addEventListener('DOMContentLoaded', () => {
+      // 状態
+      let txType = 'run';
+      let txKm = 0.0;
+      let txMin = 0;
+      let txDate = (new Date()).toISOString().slice(0,10);
+      let txTime = '';
+
+      const messages = [
+        'いい波来てます！','今日は伸びる日！','ナイス集中！','軽く一歩！','未来の自分が拍手中！','その一歩が金メダル！'
+      ];
+      const $ = s=>document.querySelector(s);
+      const fmtKm = v => (Math.max(0, Math.min(200, v))).toFixed(1);
+      const clampMin = v => Math.max(0, Math.min(600, Math.round(v)));
+
+      function setType(t){ txType=t; ['#txTypeRun','#txTypeWalk','#txTypeCycle'].forEach(sel=>{ const b=$(sel); if(!b) return; const on = sel.endsWith(t.charAt(0).toUpperCase()+t.slice(1)); b.setAttribute('aria-selected', on?'true':'false'); b.classList.toggle('active', on); }); updatePreview(); }
+      function setKm(v){ txKm = parseFloat(fmtKm(v)); $('#txDistanceView').textContent = txKm.toFixed(1); updatePreview(); }
+      function setMin(v){ txMin = clampMin(v); $('#txMinutesView').textContent = txMin; updatePreview(); }
+      function setDateStr(str){ txDate = str; updatePreview(); }
+      function setTimeStr(str){ txTime = str || ''; updatePreview(); }
+      function todayStr(d = new Date()){ const dt = new Date(d.getFullYear(), d.getMonth(), d.getDate()); return dt.toISOString().slice(0,10); }
+
+      function updatePreview(){
+        const typeLabel = txType==='run'?'ラン': txType==='walk'?'ウォーク':'サイクル';
+        $('#txSummary').textContent = `${typeLabel} ${txKm.toFixed(1)}km / ${txMin}分 ${txDate}` + (txTime?` ${txTime}`:'');
+        // XPプレビュー（既存モジュール内スコープのため概算: ラン×2.4, ウォーク×1.2, サイクル×1.0）
+        const base = 12 * Math.pow(txKm, 0.9) + 5 * Math.sqrt(Math.max(0, txMin));
+        const k = txType==='run'?2.4: txType==='walk'?1.2:1.0;
+        const xp = Math.round(base * k);
+        $('#txXpPreview').textContent = `+${isNaN(xp)?0:xp} XP`;
+      }
+
+      // 初期表示
+      $('#fxTurboMotivation').textContent = messages[Math.floor(Math.random()*messages.length)];
+      setType('run'); setKm(0); setMin(0); setDateStr(todayStr());
+
+      // 種目
+      $('#txTypeRun')?.addEventListener('click', ()=> setType('run'));
+      $('#txTypeWalk')?.addEventListener('click', ()=> setType('walk'));
+      $('#txTypeCycle')?.addEventListener('click', ()=> setType('cycle'));
+
+      // 距離
+      $('#txDistMinus')?.addEventListener('click', ()=> setKm(txKm - 0.5));
+      $('#txDistPlus')?.addEventListener('click', ()=> setKm(txKm + 0.5));
+      document.querySelectorAll('#fxTurbo .chip[data-add-dist]')?.forEach(btn=>{
+        btn.addEventListener('click', ()=>{ const add = parseFloat(btn.getAttribute('data-add-dist')||'0'); setKm(txKm + add); });
+      });
+      // 時間
+      $('#txMinMinus')?.addEventListener('click', ()=> setMin(txMin - 5));
+      $('#txMinPlus')?.addEventListener('click', ()=> setMin(txMin + 5));
+      document.querySelectorAll('#fxTurbo .chip[data-add-min]')?.forEach(btn=>{
+        btn.addEventListener('click', ()=>{ const add = parseInt(btn.getAttribute('data-add-min')||'0',10); setMin(txMin + add); });
+      });
+
+      // 日付/時間
+      $('#txToday')?.addEventListener('click', ()=> setDateStr(todayStr()));
+      $('#txYesterday')?.addEventListener('click', ()=>{ const d=new Date(); d.setDate(d.getDate()-1); setDateStr(todayStr(d)); });
+      document.querySelectorAll('#fxTurbo .chip[data-set-time]')?.forEach(btn=>{
+        btn.addEventListener('click', ()=>{ setTimeStr(btn.getAttribute('data-set-time')||''); });
+      });
+
+      // コンボ
+      document.querySelectorAll('#fxTurbo .combo')?.forEach(btn=>{
+        btn.addEventListener('click', ()=>{
+          try{
+            const c = JSON.parse(btn.getAttribute('data-combo')||'{}');
+            if(c.type) setType(c.type);
+            if(c.km!=null) setKm(c.km);
+            if(c.min!=null) setMin(c.min);
+            if(c.time) setTimeStr(c.time);
+            setDateStr(todayStr());
+          }catch{}
+        });
+      });
+
+      // 昨日と同じ（直近再現して日付を今日に）
+      $('#txRecallLast')?.addEventListener('click', ()=>{
+        try{
+          const acts = JSON.parse(localStorage.getItem('fitness_activities')||'[]');
+          if(!acts.length){ $('#txResult').textContent='直近の記録がありません'; return; }
+          const last = acts.sort((a,b)=> b.addedAt.localeCompare(a.addedAt))[0];
+          setType(last.type||'run'); setKm(last.distanceKm||0); setMin(last.minutes||0);
+          setDateStr(todayStr()); setTimeStr(last.time||'');
+          $('#txResult').textContent = '直近を今日分としてセットしました';
+        }catch{ $('#txResult').textContent='直近の取得に失敗しました'; }
+      });
+
+      // 保存：既存の詳細入力欄に値を入れて fxSave をクリック
+      $('#txSave')?.addEventListener('click', ()=>{
+        // 詳細欄が隠れていても値はセットできる
+        const typeEl = document.getElementById('fxType');
+        const distEl = document.getElementById('fxDistance');
+        const minEl = document.getElementById('fxMinutes');
+        const dateEl = document.getElementById('fxDate');
+        const timeEl = document.getElementById('fxTime');
+
+        if(typeEl) typeEl.value = txType;
+        if(distEl) distEl.value = txKm.toFixed(2);
+        if(minEl) minEl.value = String(txMin);
+        if(dateEl) dateEl.value = txDate;
+        if(timeEl) timeEl.value = txTime;
+
+        const btn = document.getElementById('fxSave');
+        if(btn){ btn.click(); $('#txResult').textContent = '保存しました！'; }
+      });
+
+      // 詳細入力の折りたたみ
+      const adv = document.getElementById('fxAdvanced');
+      const advBtn = document.getElementById('fxAdvancedToggle');
+      advBtn?.addEventListener('click', ()=>{
+        const body = adv?.querySelector('.space-y-3');
+        if(!body) return;
+        const hidden = body.classList.toggle('hidden');
+        advBtn.textContent = hidden? '表示' : '隠す';
+      });
+
+    });
+  </script>
   <script>
     // SW登録（既存と同一のSWを利用）
     if ('serviceWorker' in navigator) {
