feat(fitness): 種目選択を絵文字から文字トグルに変更（UIの一貫性と視認性を改善）
ハイテンション入力の種目ボタンをテキストのみ（ラン/ウォーク/サイクル）に刷新。既存のセグメント切替ロジックはそのまま利用。

--- a/fitness.html
+++ b/fitness.html
@@ -26,11 +26,12 @@
         <span id="fxTurboMotivation" class="text-xs text-gray-600"></span>
       </div>
 
-      <!-- 種目セグメント -->
+      <!-- 種目セグメント（文字トグル） -->
+      <div class="text-sm font-semibold text-gray-800 mb-1">種目</div>
       <div class="grid grid-cols-3 gap-2 mb-3" role="tablist" aria-label="アクティビティ種目">
-        <button class="seg-big" id="txTypeRun" aria-selected="true">🏃‍♂️ ラン</button>
-        <button class="seg-big" id="txTypeWalk" aria-selected="false">🚶‍♀️ ウォーク</button>
-        <button class="seg-big" id="txTypeCycle" aria-selected="false">🚴‍♀️ サイクル</button>
+        <button class="seg-big" id="txTypeRun" aria-selected="true">ラン</button>
+        <button class="seg-big" id="txTypeWalk" aria-selected="false">ウォーク</button>
+        <button class="seg-big" id="txTypeCycle" aria-selected="false">サイクル</button>
       </div>
 
       <!-- 距離コントロール -->
