feat(fitness-widget): 種目セグメントを絵文字から文字トグルに変更（ラン/ウォーク/サイクル）
ホームウィジェットの種目ボタン表記をテキストのみへ統一し、ハイテンション入力と体験を揃える。

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                     <!-- 種目セグメント（スマホ優先の大きめタップ） -->
                     <div class="section-title">■ 種目</div>
                     <div class="segmented mb-4" role="tablist" aria-label="種目選択">
-                      <button id="wTypeRun" class="seg-btn" role="tab" aria-selected="true">🏃‍♂️ ラン</button>
-                      <button id="wTypeWalk" class="seg-btn" role="tab" aria-selected="false">👣 ウォーク</button>
-                      <button id="wTypeCycle" class="seg-btn" role="tab" aria-selected="false">🚴‍♂️ サイクル</button>
+                      <button id="wTypeRun" class="seg-btn" role="tab" aria-selected="true">ラン</button>
+                      <button id="wTypeWalk" class="seg-btn" role="tab" aria-selected="false">ウォーク</button>
+                      <button id="wTypeCycle" class="seg-btn" role="tab" aria-selected="false">サイクル</button>
                     </div>
                     <!-- 非表示のセレクト（フォールバック） -->
                     <select id="wType" class="hidden">
