--- a/fitness.html
+++ b/fitness.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/base.css?v=3">
   <link rel="stylesheet" href="styles/animations.css?v=3">
   <link rel="stylesheet" href="styles/components.css?v=3">
-  <link rel="stylesheet" href="styles/fitness.css?v=2">
+  <link rel="stylesheet" href="styles/fitness.css?v=3">
 </head>
 <body class="bg-gray-50 min-h-screen">
   <div class="max-w-3xl mx-auto p-4">
@@ -26,12 +26,23 @@
         <span id="fxTurboMotivation" class="text-xs text-gray-600"></span>
       </div>
 
-      <!-- 種目セグメント（文字トグル） -->
+      <!-- 種目セレクタ（プルダウン式） -->
       <div class="text-sm font-semibold text-gray-800 mb-1">種目</div>
-      <div class="grid grid-cols-3 gap-2 mb-3" role="tablist" aria-label="アクティビティ種目">
-        <button class="seg-big" id="txTypeRun" aria-selected="true">ラン</button>
-        <button class="seg-big" id="txTypeWalk" aria-selected="false">ウォーク</button>
-        <button class="seg-big" id="txTypeCycle" aria-selected="false">サイクル</button>
+      <div class="mb-3">
+        <button id="txTypePicker" type="button" class="select-chip w-full" aria-haspopup="dialog" aria-expanded="false"><span id="txTypeLabel">ラン</span></button>
+      </div>
+      <!-- 種目メニュー（オーバーレイ） -->
+      <div id="txTypeMenu" class="type-menu hidden" aria-hidden="true">
+        <div class="type-menu-backdrop" id="txTypeMenuBackdrop"></div>
+        <div class="type-sheet">
+          <div class="type-sheet-header">種目を選択</div>
+          <div class="type-sheet-content">
+            <button id="txTypeRun" class="menu-item" aria-selected="true">ラン</button>
+            <button id="txTypeWalk" class="menu-item" aria-selected="false">ウォーク</button>
+            <button id="txTypeCycle" class="menu-item" aria-selected="false">サイクル</button>
+          </div>
+          <button class="menu-close" id="txTypeMenuClose">閉じる</button>
+        </div>
       </div>
 
       <!-- 距離コントロール -->
@@ -313,8 +324,13 @@
           b.setAttribute('aria-selected', on ? 'true' : 'false');
           b.classList.toggle('active', on);
         });
+        const lbl = document.getElementById('txTypeLabel');
+        if(lbl) lbl.textContent = t==='run'?'ラン': t==='walk'?'ウォーク':'サイクル';
         updatePreview();
       }
+
+      function openTxMenu(){ const m=document.getElementById('txTypeMenu'); const p=document.getElementById('txTypePicker'); if(m&&p){ m.classList.remove('hidden'); p.setAttribute('aria-expanded','true'); } }
+      function closeTxMenu(){ const m=document.getElementById('txTypeMenu'); const p=document.getElementById('txTypePicker'); if(m&&p){ m.classList.add('hidden'); p.setAttribute('aria-expanded','false'); } }
       function setKm(v){ txKm = parseFloat(fmtKm(v)); $('#txDistanceView').textContent = txKm.toFixed(1); updatePreview(); }
       function setMin(v){ txMin = clampMin(v); $('#txMinutesView').textContent = txMin; updatePreview(); }
       function setDateStr(str){ txDate = str; updatePreview(); }
@@ -335,10 +351,13 @@
       $('#fxTurboMotivation').textContent = messages[Math.floor(Math.random()*messages.length)];
       setType('run'); setKm(0); setMin(0); setDateStr(todayStr());
 
-      // 種目
-      $('#txTypeRun')?.addEventListener('click', ()=> setType('run'));
-      $('#txTypeWalk')?.addEventListener('click', ()=> setType('walk'));
-      $('#txTypeCycle')?.addEventListener('click', ()=> setType('cycle'));
+      // 種目メニュー
+      $('#txTypePicker')?.addEventListener('click', ()=> openTxMenu());
+      $('#txTypeMenuBackdrop')?.addEventListener('click', ()=> closeTxMenu());
+      $('#txTypeMenuClose')?.addEventListener('click', ()=> closeTxMenu());
+      $('#txTypeRun')?.addEventListener('click', ()=> { setType('run'); closeTxMenu(); });
+      $('#txTypeWalk')?.addEventListener('click', ()=> { setType('walk'); closeTxMenu(); });
+      $('#txTypeCycle')?.addEventListener('click', ()=> { setType('cycle'); closeTxMenu(); });
 
       // 距離
       $('#txDistMinus')?.addEventListener('click', ()=> setKm(txKm - 0.5));
