--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="styles/sekki-backgrounds.css?v=3">
     <link rel="stylesheet" href="styles/animations.css?v=3">
     <link rel="stylesheet" href="styles/components.css?v=3">
-    <link rel="stylesheet" href="styles/fitness.css?v=2">
+    <link rel="stylesheet" href="styles/fitness.css?v=3">
 </head>
 <body>
     <div id="backgroundSeason" class="min-h-screen bg-summer gradient-animation transition-all duration-1000 relative">
@@ -94,12 +94,23 @@
 
                 <!-- ミニ入力 -->
                 <div id="wForm" class="hidden mb-3">
-                    <!-- 種目セグメント（スマホ優先の大きめタップ） -->
+                    <!-- 種目（プルダウン式） -->
                     <div class="section-title">■ 種目</div>
-                    <div class="segmented mb-4" role="tablist" aria-label="種目選択">
-                      <button id="wTypeRun" class="seg-btn" role="tab" aria-selected="true">ラン</button>
-                      <button id="wTypeWalk" class="seg-btn" role="tab" aria-selected="false">ウォーク</button>
-                      <button id="wTypeCycle" class="seg-btn" role="tab" aria-selected="false">サイクル</button>
+                    <div class="mb-4">
+                      <button id="wTypePicker" type="button" class="select-chip w-full" aria-haspopup="dialog" aria-expanded="false"><span id="wTypeLabel">ラン</span></button>
+                    </div>
+                    <!-- 種目メニュー（オーバーレイ） -->
+                    <div id="wTypeMenu" class="type-menu hidden" aria-hidden="true">
+                      <div class="type-menu-backdrop" id="wTypeMenuBackdrop"></div>
+                      <div class="type-sheet">
+                        <div class="type-sheet-header">種目を選択</div>
+                        <div class="type-sheet-content">
+                          <button id="wTypeRun" class="menu-item" role="tab" aria-selected="true">ラン</button>
+                          <button id="wTypeWalk" class="menu-item" role="tab" aria-selected="false">ウォーク</button>
+                          <button id="wTypeCycle" class="menu-item" role="tab" aria-selected="false">サイクル</button>
+                        </div>
+                        <button class="menu-close" id="wTypeMenuClose">閉じる</button>
+                      </div>
                     </div>
                     <!-- 非表示のセレクト（フォールバック） -->
                     <select id="wType" class="hidden">
