--- a/index.html
+++ b/index.html
@@ -98,9 +98,14 @@
                         </div>
                         <h3 class="text-lg sm:text-xl font-bold text-white">FITNESS TRACKER</h3>
                     </div>
-                    <button id="wToggle" class="fitness-toggle-btn">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+                    <button id="wToggle" class="fitness-toggle-btn" aria-label="入力を表示" title="入力を表示">
+                        <!-- プラス（閉） -->
+                        <svg class="w-5 h-5 icon-plus" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v12M6 12h12"></path>
+                        </svg>
+                        <!-- マイナス（開） -->
+                        <svg class="w-5 h-5 icon-minus hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 12h12"></path>
                         </svg>
                     </button>
                 </div>
