feat: 保存時のアクション表示と分・秒入力の対応\n\n距離保存時にトーストで保存完了を通知。入力フォームに秒フィールドを追加し、分+秒（小数分換算）で保存・集計できるようにしました。日別表示は分秒表記に対応。直近入力の秒も復元します。

--- a/index.html
+++ b/index.html
@@ -173,9 +173,13 @@
                         </div>
                         <div class="future-input-group">
                           <label class="future-label">時間</label>
-                          <div class="future-input-wrapper">
-                            <input id="wMinutes" type="number" inputmode="numeric" step="1" min="1" placeholder="0" class="future-input" />
+                          <div class="future-input-wrapper" style="margin-bottom:0.5rem">
+                            <input id="wMinutes" type="number" inputmode="numeric" step="1" min="0" placeholder="0" class="future-input" />
                             <span class="future-unit">min</span>
+                          </div>
+                          <div class="future-input-wrapper">
+                            <input id="wSeconds" type="number" inputmode="numeric" step="1" min="0" max="59" placeholder="0" class="future-input" />
+                            <span class="future-unit">sec</span>
                           </div>
                           <div class="future-quick-buttons">
                             <button id="wPlus10Min" class="future-quick-btn">+10</button>
