feat: アクティビティ編集機能とカレンダー改善\n\n日別一覧から各記録を編集できるようにし、更新時はフォームへ読み込み→UPDATEとして保存（XPは差分調整）。カレンダーは日付セルに種目ドットと件数バッジを表示、活動日の視認性を向上。日曜が欠ける問題を防ぐためグリッドの列定義をminmax化しオーバーフローを抑止しました。

--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
                             </svg>
                             <span>直近を再入力</span>
                           </button>
+                          <button id="wEditCancel" class="future-recall-btn hidden">編集をキャンセル</button>
                           <button id="wSave" class="future-save-btn">
                             <span class="save-text">SAVE DATA</span>
                             <div class="save-pulse"></div>
