--- a/fitness.html
+++ b/fitness.html
@@ -7,7 +7,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1f2937">
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- このページは「レベル/XP」と「獲得済み称号」だけを表示します -->
+  <!-- このページは「レベル/XP」と「称号コレクション（獲得済）」を表示します -->
 </head>
 <body class="bg-gray-50 min-h-screen">
   <div class="max-w-2xl mx-auto p-4">
@@ -28,20 +28,39 @@
       <div id="sumXpText" class="mt-2 text-right text-xs text-gray-600">0 / 150 XP</div>
     </section>
 
-    <!-- 獲得済みの称号 -->
+    <!-- 称号コレクション -->
     <section class="rounded-2xl bg-white shadow-sm border border-gray-200 p-4">
       <div class="flex items-center justify-between mb-3">
-        <h2 class="text-lg font-semibold text-gray-900">獲得済みの称号</h2>
+        <h2 class="text-lg font-semibold text-gray-900">称号コレクション</h2>
         <div id="earnedCount" class="text-sm text-gray-500"></div>
       </div>
-      <div id="earnedList" class="grid grid-cols-1 sm:grid-cols-2 gap-2"></div>
+
+      <!-- ツールバー: フィルタ＋並び替え -->
+      <div class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between mb-3">
+        <div id="earnedFilters" class="flex flex-wrap gap-2"></div>
+        <div class="flex items-center gap-2 text-sm">
+          <label for="earnedSort" class="text-gray-600">並び替え</label>
+          <select id="earnedSort" class="border border-gray-300 rounded-md px-2 py-1 text-sm">
+            <option value="recent">最近獲得</option>
+            <option value="category">カテゴリ</option>
+            <option value="threshold">閾値順</option>
+            <option value="name">名称</option>
+          </select>
+        </div>
+      </div>
+
+      <!-- カテゴリ進捗 -->
+      <div id="earnedProgress" class="grid grid-cols-2 sm:grid-cols-3 gap-2 mb-3"></div>
+
+      <!-- 一覧 -->
+      <div id="earnedList" class="grid grid-cols-1 sm:grid-cols-2 gap-3"></div>
       <div id="earnedEmpty" class="hidden text-sm text-gray-500">まだ称号はありません。</div>
     </section>
 
   </div>
 
   <script src="js/fitness-data.js?v=1"></script>
-  <script type="module" src="js/fitness-summary.js?v=1"></script>
+  <script type="module" src="js/fitness-summary.js?v=2"></script>
   <script>
     // SW登録（既存と同一のSWを利用）
     if ('serviceWorker' in navigator) {
