feat: 大阪市天王寺区の当日天気表示を追加
Open-Meteo API を利用して天王寺区の当日天気を表示します。

- weatherAPI を新規追加（天王寺区の座標/コード→日本語/絵文字）
- app-simple に天気更新処理を追加
- index に天気表示UIを追加
- README に機能を追記

影響範囲: 新規APIアクセスが追加されます（Open-Meteo）。オフライン時は「取得失敗」を表示します。

--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
                         </div>
                     </div>
 
+                    <!-- 大阪市天王寺区の天気 -->
+                    <div id="osakaWeatherSection" class="mt-3 flex items-center justify-center gap-4 text-base text-gray-700">
+                        <div class="text-gray-600">大阪市天王寺区</div>
+                        <div id="weatherIcon" aria-hidden="true">—</div>
+                        <div id="weatherDesc" class="font-medium">—</div>
+                        <div>
+                            <span id="currentTemp" class="font-semibold">—</span>
+                        </div>
+                        <div class="text-gray-600">
+                            <span id="tempRange">—</span>
+                        </div>
+                    </div>
+
                     <!-- 今日の日付を大きく表示 -->
                     <div class="mt-6">
                         <div class="text-sm text-gray-600" id="todayDateYear"></div>
@@ -78,7 +91,7 @@
     <!-- JavaScript Files -->
     <script src="js/data/sekki-data.js?v=3"></script>
     <script src="js/animations/seasonal-animations.js?v=3"></script>
-    <script type="module" src="js/app-simple.js?v=2"></script>
+    <script type="module" src="js/app-simple.js?v=3"></script>
 
     <script>
         // アプリケーションの初期化
